Place into public domain

--- a/primer.css
+++ b/primer.css
@@ -7,10 +7,10 @@
  * basic accessibility recommendations, and addresses
  * a few common cross-browser nuisances.
  *
- * Last updated 7 October 2023
- * @version 1.2.3
+ * Last updated 5 February 2024
+ * @version 1.2.4
  * @link https://github.com/clairelizbet/primer
- * @license MIT
+ * @license CC0 Public Domain
  */
 
 /* =============================== Variables =============================== */
